# thermal_test

./: .gitignore  CMakeLists.txt  README.txt
conf/: test.conf  test_i.conf
include/: BoundaryConditions.h  ConfigReader.h  DirectSolver.h  ExactSolution.h  Grid.h  InverseSolver.h  ParserConst.h  SingleStepInverseSolver.h  Solver.h  SourceFunction.h  TempSaver.h  ThermalConductivity.h  VTKSaver.h
output/vtk/: results_thermal_simulation_1_0.vtk  results_thermal_simulation_1_1.vtk  results_thermal_simulation_1_10.vtk  results_thermal_simulation_1_100.vtk  results_thermal_simulation_1_101.vtk  results_thermal_simulation_1_102.vtk  results_thermal_simulation_1_103.vtk  results_thermal_simulation_1_104.vtk  results_thermal_simulation_1_105.vtk  results_thermal_simulation_1_106.vtk  results_thermal_simulation_1_107.vtk  results_thermal_simulation_1_108.vtk  results_thermal_simulation_1_109.vtk  results_thermal_simulation_1_11.vtk  results_thermal_simulation_1_110.vtk  results_thermal_simulation_1_111.vtk  results_thermal_simulation_1_112.vtk  results_thermal_simulation_1_113.vtk  results_thermal_simulation_1_114.vtk  results_thermal_simulation_1_115.vtk  results_thermal_simulation_1_116.vtk  results_thermal_simulation_1_117.vtk  results_thermal_simulation_1_118.vtk  results_thermal_simulation_1_119.vtk  (+976 more)
src/: BoundaryConditions.cpp  ConfigReader.cpp  DirectSolver.cpp  ExactSolution.cpp  Grid.cpp  InverseSolver.cpp  ParserConst.cpp  SingleStepInverseSolver.cpp  Solver.cpp  SourceFunction.cpp  TempSaver.cpp  ThermalConductivity.cpp  VTKSaver.cpp  main.cpp
(+2 files in other folders)
